public class SimuladorRCCCF {
    
}
